--- a/how_to_start.ipynb
+++ b/how_to_start.ipynb
@@ -30,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1299eba5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torchvision\n",
-    "\n",
+    "import torch\n",
     "model = torchvision.models.resnet18(weights=None)"
    ]
   },
@@ -52,10 +52,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e2c107de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Network Metrics for ResNet18 ===\n",
+      "Total parameters: 11,689,512\n",
+      "Trainable parameters: 11,689,512\n",
+      "Model size (parameters only): 44.59 MB\n",
+      "Model size (with buffers): 44.63 MB\n",
+      "Estimated FLOPs: 1,824,033,792\n",
+      "Average precision bits per parameter: 32.0\n",
+      "Parameter dtype summary:\n",
+      "  torch.float32: 11,689,512 parameters\n",
+      "Average inference time (CPU): 11.56 ms\n",
+      "GPU inference time: Not available (no CUDA device)\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the network metrics\n",
     "from rankme.network import ParamCount, ModelSizeMB, Flops, PrecisionBits, InferenceTime\n",
@@ -131,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "dc7ff47e",
    "metadata": {},
    "outputs": [],
@@ -142,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "29f0d7bf",
    "metadata": {},
    "outputs": [
@@ -172,36 +190,36 @@
       "Model Size: 44.63 MB\n",
       "FLOPs: 1,824,033,792\n",
       "Avg Precision: 32.0 bits\n",
-      "CPU Inference: 12.12 ms\n",
+      "CPU Inference: 12.45 ms\n",
       "\n",
       "📊 FEATURE LEARNING METRICS\n",
       "------------------------------\n",
-      "RankMe Score: 0.5543\n",
-      "RankMe (Centered): 0.5493\n",
+      "RankMe Score: 0.5542\n",
+      "RankMe (Centered): 0.5491\n",
       "\n",
       "🎯 CLASSIFICATION METRICS\n",
       "------------------------------\n",
-      "Accuracy: 0.0625\n",
-      "F1 Score: 0.0571\n",
-      "Precision: 0.0500\n",
-      "Recall: 0.0667\n",
-      "Iou: 0.0333\n",
+      "Accuracy: 0.0000\n",
+      "F1 Score: 0.0000\n",
+      "Precision: 0.0000\n",
+      "Recall: 0.0000\n",
+      "Iou: 0.0000\n",
       "\n",
       "📈 REGRESSION METRICS\n",
       "------------------------------\n",
-      "MSE: 1.7037\n",
-      "MAE: 1.0175\n",
-      "RMSE: 1.3053\n",
-      "R2_SCORE: -0.6810\n",
+      "MSE: 1.9910\n",
+      "MAE: 1.1645\n",
+      "RMSE: 1.4110\n",
+      "R2_SCORE: -1.1355\n",
       "\n",
       "============================================================\n",
       "\n",
       "Quick Summary:\n",
       "Parameters: 11,689,512\n",
       "Model Size: 44.63 MB\n",
-      "RankMe Score: 0.5543\n",
-      "Accuracy: 0.0625\n",
-      "R² Score: -0.6810\n"
+      "RankMe Score: 0.5542\n",
+      "Accuracy: 0.0000\n",
+      "R² Score: -1.1355\n"
      ]
     }
    ],
